--- a/conservatoire/Conservatoire.csproj
+++ b/conservatoire/Conservatoire.csproj
@@ -90,14 +90,24 @@
     <Compile Include="Controleur\Mgr.cs" />
     <Compile Include="DAL\Connexion.cs" />
     <Compile Include="DAL\EleveDAO.cs" />
+    <Compile Include="DAL\InstrumentDAO.cs" />
+    <Compile Include="DAL\JourDAO.cs" />
+    <Compile Include="DAL\NiveauDAO.cs" />
     <Compile Include="DAL\PersonneDAO.cs" />
     <Compile Include="DAL\ProfDAO.cs" />
     <Compile Include="DAL\SeanceDAO.cs" />
+    <Compile Include="DAL\TrancheDAO.cs" />
     <Compile Include="form4.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="form4.Designer.cs">
       <DependentUpon>form4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="form5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form5.Designer.cs">
+      <DependentUpon>form5.cs</DependentUpon>
     </Compile>
     <Compile Include="listeSeance.cs">
       <SubType>Form</SubType>
@@ -125,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="form4.resx">
       <DependentUpon>form4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="form5.resx">
+      <DependentUpon>form5.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="listeSeance.resx">
       <DependentUpon>listeSeance.cs</DependentUpon>
