--- a/conservatoire/Conservatoire.csproj
+++ b/conservatoire/Conservatoire.csproj
@@ -94,6 +94,7 @@
     <Compile Include="DAL\InstrumentDAO.cs" />
     <Compile Include="DAL\JourDAO.cs" />
     <Compile Include="DAL\NiveauDAO.cs" />
+    <Compile Include="DAL\PayerDAO.cs" />
     <Compile Include="DAL\PersonneDAO.cs" />
     <Compile Include="DAL\ProfDAO.cs" />
     <Compile Include="DAL\SeanceDAO.cs" />
